--- a/templates/PHP.xml
+++ b/templates/PHP.xml
@@ -23,4 +23,9 @@
       <option name="PHP Expression" value="true" />
     </context>
   </template>
+  <template name="psy" value="eval(\Psy\sh());" description="Psysh runtime developer console" toReformat="false" toShortenFQNames="true">
+    <context>
+      <option name="PHP" value="true" />
+    </context>
+  </template>
 </templateSet>
