PS-2017.3 <joao@imac-dev.riic.local Update PHP.xml, user.xml	Create Zen XSL.xml, xsl.xml, html_xml.xml, Yii.xml, Vue.xml

--- a/templates/user.xml
+++ b/templates/user.xml
@@ -6,4 +6,11 @@
       <option name="PHP Comment" value="true" />
     </context>
   </template>
+  <template name="hoje" value="$hoje = date('Y-m-d');" shortcut="SPACE" description="Variável com a data atual" toReformat="false" toShortenFQNames="true">
+    <context>
+      <option name="PHP Expression" value="true" />
+      <option name="PHP Statement" value="true" />
+      <option name="PHP String Literal" value="true" />
+    </context>
+  </template>
 </templateSet>
