--- a/templates/Yii.xml
+++ b/templates/Yii.xml
@@ -24,4 +24,9 @@
       <option name="PHP" value="true" />
     </context>
   </template>
+  <template name="dump3" value="\yii\helpers\VarDumper::dump($SELECTION$$END$, 10); die;" shortcut="SPACE" description="Yii2 dumper" toReformat="false" toShortenFQNames="true">
+    <context>
+      <option name="PHP" value="true" />
+    </context>
+  </template>
 </templateSet>
