--- a/templates/user.xml
+++ b/templates/user.xml
@@ -4,4 +4,14 @@
       <option name="PHP" value="true" />
     </context>
   </template>
+  <template name="dump" value="CVarDumper::dump($END$, 10, true);" description="Yii1 VarDumper" toReformat="false" toShortenFQNames="true">
+    <context>
+      <option name="PHP" value="true" />
+    </context>
+  </template>
+  <template name="swal" value="swal({&#10;    type: '$END$',&#10;    title: '',&#10;    text: ''&#10;});" description="SWAL alert" toReformat="false" toShortenFQNames="true">
+    <context>
+      <option name="JAVA_SCRIPT" value="true" />
+    </context>
+  </template>
 </templateSet>
