--- a/templates/user.xml
+++ b/templates/user.xml
@@ -1,17 +1,25 @@
 <templateSet group="user">
-  <template name="dump2" value="\yii\helpers\VarDumper::dump($END$, 10, true); die;" description="Yii2 VarDumper" toReformat="false" toShortenFQNames="true">
+  <template name="dump2" value="\yii\helpers\VarDumper::dump($END$, 10, true); die;" description="Yii2 VarDumper with formatting" toReformat="false" toShortenFQNames="true">
     <context>
       <option name="PHP" value="true" />
+      <option name="PHP Comment" value="false" />
     </context>
   </template>
   <template name="dump" value="CVarDumper::dump($END$, 10, true);" description="Yii1 VarDumper" toReformat="false" toShortenFQNames="true">
     <context>
       <option name="PHP" value="true" />
+      <option name="PHP Comment" value="false" />
     </context>
   </template>
   <template name="swal" value="swal({&#10;    type: '$END$',&#10;    title: '',&#10;    text: ''&#10;});" description="SWAL alert" toReformat="false" toShortenFQNames="true">
     <context>
       <option name="JAVA_SCRIPT" value="true" />
+    </context>
+  </template>
+  <template name="dump3" value="\yii\helpers\VarDumper::dump($END$); die;" description="Yii2 VarDumper no formatting" toReformat="false" toShortenFQNames="true">
+    <context>
+      <option name="PHP" value="true" />
+      <option name="PHP Comment" value="false" />
     </context>
   </template>
 </templateSet>
