PS-2018.1.4 <joao@imac-dev.riic.local Update user.xml

--- a/templates/user.xml
+++ b/templates/user.xml
@@ -22,4 +22,18 @@
       <option name="PHP Comment" value="false" />
     </context>
   </template>
+  <template name="queryall" value="Yii::$app-&gt;db-&gt;createCommand($sql)-&gt;queryAll();" description="QueryAll" toReformat="false" toShortenFQNames="true">
+    <context>
+      <option name="PHP" value="true" />
+      <option name="PHP Comment" value="false" />
+      <option name="PHP String Literal" value="false" />
+    </context>
+  </template>
+  <template name="querycol" value="Yii::$app-&gt;db-&gt;createCommand($sql)-&gt;queryColumn();" description="QueryColumn" toReformat="false" toShortenFQNames="true">
+    <context>
+      <option name="PHP" value="true" />
+      <option name="PHP Comment" value="false" />
+      <option name="PHP String Literal" value="false" />
+    </context>
+  </template>
 </templateSet>
